# app/Http/Requests/moveBookmarkRequest.php
@@ -1,0 +1,50 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Contracts\Validation\Validator;
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Http\JsonResponse;
+use Illuminate\Validation\ValidationException;
+
+/**
+ * @property mixed category_id
+ * @property mixed bookmark_id
+ */
+class moveBookmarkRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules(): array
+    {
+        return [
+            'bookmark_id' => 'required',
+            'category_id' => 'required',
+        ];
+    }
+
+
+    public function failedValidation(Validator $validator)
+    {
+
+        $json = [
+            'status' => 'input_error',
+            'errors' => $validator->errors()
+        ];
+        $response = new JsonResponse($json, 400);
+        throw (new ValidationException($validator, $response))->status(400);
+    }
+}
