# routes/api.php
@@ -18,7 +18,6 @@ Route::get('unauthenticated', function () {
 
 Route::group([
     'prefix' => 'v1',
-//    'middleware' => 'timezone',
 ], function () {
 
     Route::post('/token', 'UserController@refreshToken'); // refresh token
@@ -32,8 +31,9 @@ Route::group([
     Route::delete('/category/{category_id}', 'BookMarkCategoryController@destroy'); // 카테고리 삭제
 
     Route::post('/bookmarks', 'BookmarkController@store'); // 공유하기
-    Route::get('/bookmarks/{category_id}', 'BookmarkController@index'); // 카테고리의 공유항목 가져오기
-    Route::delete('/bookmarks/{category_id}/{bookmark_id}', 'BookmarkController@destroy'); // 공유항목 삭제하기
+    Route::post('/bookmarks/move', 'BookmarkController@move'); // 북마크 이동
+    Route::get('/bookmarks/{category_id}', 'BookmarkController@index'); // 카테고리의 북마크들 가져오기
+    Route::delete('/bookmarks/{category_id}/{bookmark_id}', 'BookmarkController@destroy'); // 북마크 삭제하기
 });
 
 
